# sverif

./: .eccc_setup_intel  .git-subtree  .gitignore  .gitmodules  .setenv.dot  .setenv_ssm  CMakeLists.txt  DESCRIPTION  MANIFEST  Makefile.user.mk  Makefile.user.root.mk  README  README.md  _sverif_prep  config.in  eval.R  prep.R  ssmusedep.bndl  ssmusedep.bndl-cmc  ssmusedep.bndl-science  ssmusedep_post.bndl-cmc  sverif_eval  sverif_prep
.ssm.d/: post-install.in
armnlib/: Makefile  fstd98.c
doc/: Sverif-presentation-2012.ppt  techdoc.md  userguide.md
include/: Makefile.local.mk  Makefile.ssm.mk
scripts/: eval.R  prep.R  sverif_eval
src/: .name  CMakeLists.txt  calc_stat_mod.F90  sverif_eval.F90  sverif_fname.F90  sverif_prep.F90
src/base/: calc_stat_mod.ftn90  rng_mod.F90  sverif_eval.ftn90  sverif_fname.F90  sverif_fname.ftn90  sverif_prep.ftn90
src/mpi_stubs/: mpi_stubs.F90
src/sverif/: CMakeLists.txt  calc_stat_mod.F90  sverif_prep.F90
